<resources>
    <string name="app_name">LIFE Bienestar</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--activity_login-->
    <string name="login_bienvenido">Bienvenido</string>
    <string name="login_datos">Introduce tu correo y contraseña</string>
    <string name="login_mail">E-mail</string>
    <string name="login_password">Contraseña</string>
    <string name="login_acceder">Acceder</string>
    <string name="login_registrar">¿Eres nuevo aquí? Registrate</string>
    <string name="login_forgotPassword">Olvide mi contraseña</string>

    <!--activity_signup-->
    <string name="signup_registrar">Registrar</string>
    <string name="signup_yaregistrado">¿Ya eres miembro? Ingresa</string>
    <string name="signup_nombre">Nombre</string>


    <!--activity_forgotpassword-->
    <string name="forgotpassword_regresar">Regresar</string>
    <string name="title_activity_editar_usuario">EditarUsuarioActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
