<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:paddingTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_bienvenido"
            android:textColor="@android:color/black"
            android:textSize="35dp" />

        <TextView
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_datos"
            android:textColor="@android:color/black"
            android:textSize="17.5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/login_mail"
            android:textColorHint="@color/colorPrimary">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/login_password"
            android:textColorHint="@color/colorPrimary">
            <android.support.design.widget.TextInputEditText
                android:textColor="@android:color/black"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:id="@+id/editText_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_acceder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etpass"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/login_acceder"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/textView_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/login_registrar"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView_forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/login_forgotPassword"
            android:textColor="@color/colorAccent"
            android:textSize="16dp" />

    </LinearLayout>

</LinearLayout>