<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".SignupActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:id="@+id/usuario_imagen_registro"
        android:src="@drawable/profile"
        android:scaleType="centerCrop"
        app:civ_border_color="@color/colorPrimaryDark"
        app:civ_border_width="4dp"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:hint="@string/signup_nombre"
            android:textColorHint="@color/colorPrimary">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_nombreRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:inputType="textCapWords|textPersonName"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_mail"
            android:textColorHint="@color/colorPrimary">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_correoRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:hint="@string/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_passwordRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:inputType="textPassword"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:padding="12dp"
            android:text="@string/signup_registrar"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/editText_yaregistrado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signup_yaregistrado"
            android:textColor="@color/colorAccent"
            android:textSize="16dip" />

    </LinearLayout>

</LinearLayout>